Fix some layout issues in subscription mails

--- a/app/assets/stylesheets/mailers/layout.css.scss
+++ b/app/assets/stylesheets/mailers/layout.css.scss
@@ -2,6 +2,14 @@
 @import 'mixins';
 @import 'bootstrap';
 
+// general
+
+address, p, dl, ol, ul, table {
+  &:last-child {
+    margin-bottom: 0px;
+  }
+}
+
 a {
   color: $linkColor !important;
 }
@@ -16,23 +24,42 @@ a {
   text-align: center;
 
   h1 {
+    margin: 20px;
+    
     small {
       display: block;
+      margin-top: 20px;
+      
+      font-size: $fontSizeLarge;
+
       color: $grayLight !important;
     }
   }
 }
 
+// footer
+
+.footer {
+  margin: 40px 0px;
+}
+
+// sections
+
 .section {
   @extend section;
+  
+  ul, p {
+    margin-top: 20px !important;
+    margin-left: 50px !important;
+  }
 }
 
 .section + section {
-  padding-top: 20px;
+  padding-top: 40px;
 }
 
 .search-results {
-  margin: 0px 0px 0px 40px !important;
+  margin: 0px 0px 20px 40px !important;
 
   li {
     margin-left: 0px;
